--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-spinners": "^0.10.4",
+    "react-toastify": "^6.2.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
